# flux-iot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  advanced_rule.rhai  config.toml  docker-compose.timescaledb.yml  docker-compose.yml  flux.db  test_mqtt.py  test_plugin_integration.sh  test_plugin_log.sh
crates/flux-coap/: Cargo.toml  README.md
crates/flux-coap/src/: adapter.rs  client.rs  lib.rs  types.rs
crates/flux-config-manager/: Cargo.toml  README.md
crates/flux-config-manager/src/: file_source.rs  lib.rs  manager.rs  postgres_source.rs  source.rs  sqlite_source.rs  validator.rs  version.rs
crates/flux-config-manager/tests/: integration_test.rs
crates/flux-control/: Cargo.toml  README.md
crates/flux-control-api/: Cargo.toml
crates/flux-control-api/src/: error.rs  lib.rs  routes.rs
crates/flux-control-api/src/handlers/: batch.rs  command.rs  mod.rs  scene.rs
crates/flux-control/migrations/: 001_create_control_tables.sql
crates/flux-control/src/: lib.rs
crates/flux-control/src/batch/: executor.rs  mod.rs  model.rs
crates/flux-control/src/channel/: mod.rs  mqtt.rs  trait_def.rs
crates/flux-control/src/command/: executor.rs  mod.rs  model.rs  queue.rs  status.rs
crates/flux-control/src/db/: entities.rs  mod.rs  repository.rs
crates/flux-control/src/response/: handler.rs  mod.rs
crates/flux-control/src/scene/: engine.rs  mod.rs  model.rs  (+1 more)
crates/flux-core/: Cargo.toml
crates/flux-core/src/: bus.rs  error.rs  lib.rs
crates/flux-device/: Cargo.toml  README.md
crates/flux-device-api/: Cargo.toml  README.md
crates/flux-device-api/examples/: server.rs
crates/flux-device-api/src/: api.rs  error.rs  lib.rs  models.rs  state.rs
crates/flux-device/examples/: basic_usage.rs
crates/flux-device/migrations/: 001_create_devices_tables.sql
crates/flux-device/src/: error.rs  group.rs  group_tests.rs  lib.rs  manager.rs  model.rs  monitor.rs  registry.rs
crates/flux-device/tests/: integration_test.rs  test_helpers.rs
crates/flux-gb28181d/: Cargo.toml
crates/flux-gb28181d/src/: main.rs  telemetry.rs
crates/flux-logging/: Cargo.toml  README.md
crates/flux-logging/examples/: logging_demo.rs
crates/flux-logging/src/: aggregator.rs  lib.rs  sampler.rs  structured.rs  tracer.rs
crates/flux-media-core/: Cargo.toml  README.md
crates/flux-media-core/examples/: basic_usage.rs
crates/flux-media-core/src/: error.rs  lib.rs  protocol.rs  snapshot.rs  storage.rs  types.rs
crates/flux-metrics/: Cargo.toml  README.md
crates/flux-metrics/examples/: alert_system.rs
crates/flux-metrics/src/: aggregator.rs  alert.rs  collector.rs  lib.rs  notifier.rs  system.rs
crates/flux-middleware/: Cargo.toml  README.md
crates/flux-middleware/src/: lib.rs
crates/flux-modbus/: Cargo.toml  README.md
crates/flux-modbus/examples/: basic_usage.rs
crates/flux-modbus/src/: adapter.rs  client.rs  lib.rs  types.rs
crates/flux-mqtt/: Cargo.toml  README.md
crates/flux-mqtt/examples/: mqtt_server.rs  mqtt_with_acl.rs  mqtt_with_metrics.rs
crates/flux-mqtt/migrations/: 001_create_mqtt_tables.sql
crates/flux-mqtt/src/: acl.rs  handler.rs  lib.rs  manager.rs  metrics.rs  retained.rs  tls.rs  topic_matcher.rs
crates/flux-mqtt/tests/: integration_test.rs  phase2_integration_test.rs
crates/flux-notify/: Cargo.toml
crates/flux-notify/src/: lib.rs  manager.rs  message.rs  notifier.rs  providers.rs
crates/flux-onvif/: Cargo.toml
crates/flux-onvif/src/: client.rs  discovery.rs  main.rs
crates/flux-opcua/: Cargo.toml  README.md
crates/flux-opcua/src/: adapter.rs  client.rs  lib.rs  types.rs
crates/flux-protocol/: Cargo.toml  README.md
crates/flux-protocol/src/: address.rs  client.rs  factory.rs  lib.rs  types.rs
crates/flux-rtmpd/: Cargo.toml  README.md  SECURITY.md
crates/flux-rtmpd/src/: auth.rs  hls_manager.rs  http_flv.rs  main.rs  media_processor.rs  middleware.rs  rtmp_server.rs  rtmp_stream.rs  stream_manager.rs  telemetry.rs
crates/flux-rtspd/: Cargo.toml  README.md
crates/flux-rtspd/src/: aac_depacketizer.rs  h264_depacketizer.rs  h265_depacketizer.rs  lib.rs  main.rs  multicast_receiver.rs  rtcp_receiver.rs  rtp_receiver.rs  rtsp_client.rs  sdp_parser.rs  stream_manager.rs  telemetry.rs
crates/flux-rtspd/tests/: integration_tests.rs  multicast_tests.rs  tcp_transport_tests.rs
crates/flux-rule/: Cargo.toml  README.md
crates/flux-rule/examples/: complete_demo.rs
crates/flux-rule/src/: context.rs  engine.rs  execution.rs  functions.rs  lib.rs  model.rs  storage.rs  trigger.rs
crates/flux-script/: Cargo.toml
crates/flux-script/src/: lib.rs  tests.rs
crates/flux-server/: Cargo.toml
crates/flux-server/src/: api.rs  auth.rs  config.rs  config_manager.rs  config_provider.rs  gb28181_backend.rs  lib.rs  main.rs  metrics.rs  mqtt.rs  storage.rs  worker.rs
crates/flux-server/tests/: api_tests.rs  config_reload_tests.rs
crates/flux-shutdown/: Cargo.toml  README.md
crates/flux-shutdown/examples/: shutdown_demo.rs
crates/flux-shutdown/src/: connection.rs  coordinator.rs  lib.rs  resource.rs  signal.rs  state.rs
crates/flux-srt/: Cargo.toml
crates/flux-srt/src/: ack.rs  bandwidth.rs  buffer.rs  caller.rs  congestion.rs  handshake.rs  lib.rs  listener.rs  main.rs  packet.rs  receiver.rs  sender.rs  socket.rs  statistics.rs  telemetry.rs
crates/flux-srt/tests/: integration_test.rs
crates/flux-storage/: Cargo.toml
crates/flux-storage/src/: disk.rs  health.rs  lib.rs  manager.rs  metrics.rs  pool.rs  segment.rs
crates/flux-storage/tests/: integration_test.rs
crates/flux-stream/: Cargo.toml  EXAMPLES.md  PERFORMANCE_TUNING.md  README.md
crates/flux-stream/src/: context.rs  lib.rs  manager.rs  stream.rs  trigger.rs
crates/flux-timeseries/: Cargo.toml  README.md
crates/flux-timeseries/examples/: archive_cleanup.rs  basic_usage.rs  dynamic_archive.rs  scheduled_tasks.rs
crates/flux-timeseries/src/: archive.rs  cleanup.rs  downsample.rs  lib.rs  model.rs  query.rs  scheduler.rs  store.rs
crates/flux-types/: Cargo.toml
crates/flux-types/src/: device.rs  lib.rs  message.rs
(+313 files in other folders)
