[workspace]
members = [
    "crates/*",
    "sdk/*",
    # "plugins/*", # Plugins are often separate build targets (wasm32), but can be in workspace for convenience if needed. 
                   # However, mixing targets in workspace can be tricky. Let's keep them out of default members or handle carefully.
                   # For now, let's include them but we might need to be careful with `cargo build` at root.
                   # Actually, for Wasm plugins, it's often better to treat them as separate projects or strictly separate members.
                   # Let's include crate "sdk" and "crates" first.
]
exclude = [
    "plugins", # Exclude plugins from the main workspace build to avoiding target conflicts (wasm32 vs native)
]
resolver = "2"
