[workspace]
members = [
    "crates/flux-types",
    "crates/flux-core",
    "crates/flux-plugin",
    "crates/flux-script",
    "crates/flux-server",
    "crates/flux-mqtt",
    "sdk/flux-plugin-sdk", 
    "crates/flux-video",
    "crates/flux-gb28181d",
    "crates/flux-media-core",
    "crates/flux-notify",
    "crates/flux-rtmpd",
    "crates/flux-rtspd",
    "crates/flux-onvif",
    "crates/flux-srt",
    "crates/flux-config",
    "crates/flux-storage", 
    "crates/flux-config-manager", 
    "crates/flux-metrics", 
    "crates/flux-logging", 
    "crates/flux-shutdown", 
    "crates/flux-stream", 
    "crates/flux-middleware", 
    "crates/flux-device", 
    "crates/flux-device-api", 
    "crates/flux-control",
    "crates/flux-control-api",
    "crates/flux-timeseries",
    "crates/flux-control", "crates/flux-control-api", "crates/flux-timeseries", "crates/flux-protocol", "crates/flux-modbus", "crates/flux-coap", "crates/flux-opcua", "crates/flux-rule",
    # "plugins/*", # Plugins are often separate build targets (wasm32), but can be in workspace for convenience if needed.
                   # However, mixing targets in workspace can be tricky. Let's keep them out of default members or handle carefully.
                   # For now, let's include them but we might need to be careful with `cargo build` at root.
                   # Actually, for Wasm plugins, it's often better to treat them as separate projects or strictly separate members.
                   # Let's include crate "sdk" and "crates" first.
]
exclude = [
    "plugins", # Exclude plugins from the main workspace build to avoiding target conflicts (wasm32 vs native)
]
resolver = "2"
