[package]
name = "flux-config-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# 文件监听
notify = "6.1"

# 数据库（可选特性）
sqlx = { version = "0.7", features = ["sqlite", "postgres", "runtime-tokio-rustls"], optional = true }

[features]
default = []
sqlite = ["sqlx"]
postgres = ["sqlx"]

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
