[package]
name = "flux-control"
version = "0.1.0"
edition = "2021"
authors = ["FLUX IOT Team"]
description = "Device control functionality for FLUX IOT platform"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
rhai = { version = "1.16", features = ["serde", "sync"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"], optional = true }
rumqttc = { version = "0.24", optional = true }

# Workspace dependencies
flux-core = { path = "../flux-core" }
flux-types = { path = "../flux-types" }
flux-device = { path = "../flux-device" }

[features]
default = []
persistence = ["sea-orm"]
mqtt = ["rumqttc"]

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
