[package]
name = "flux-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
anyhow = "1.0"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
flux-types = { path = "../flux-types" }

[dev-dependencies]
serde_json = "1.0"
