[package]
name = "flux-gb28181d"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6" }
bytes = "1.5"
chrono = { version = "0.4" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

flux-video = { path = "../flux-video" }
flux-media-core = { path = "../flux-media-core" }

[dev-dependencies]
tower = "0.4"
hyper = "0.14"
urlencoding = "2.1"
tempfile = "3"
rand = "0.8"
