[package]
name = "flux-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
prometheus = "0.13"
lazy_static = "1.4"
sysinfo = "0.30"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
