[package]
name = "flux-middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.0"
redis = { version = "0.24", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
default = []
redis-session = ["redis"]

[dev-dependencies]
tokio-test = "0.4"
