[package]
name = "flux-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = "3.0.0-pre.14"
ntex-mqtt = "=7.0.0-pre.1"
ntex-service = "4"
futures = "0.3"
dashmap = "5.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = "1.0"
serde_json = "1.0"
bytes = "1.0"
anyhow = "1.0"

# Workspace dependencies
flux-core = { path = "../flux-core" }
flux-types = { path = "../flux-types" }
