[package]
name = "flux-notify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"

# 邮件通知
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# 配置
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
