[package]
name = "flux-onvif"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flux-onvif"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
bytes = "1.5"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
flux-media-core = { path = "../flux-media-core" }
quick-xml = { version = "0.31", features = ["serialize"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
