[package]
name = "flux-protocol"
version = "0.1.0"
edition = "2021"
authors = ["FLUX IOT Team"]
description = "Protocol abstraction layer for FLUX IOT platform"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
url = "2.5"

# Workspace dependencies
flux-core = { path = "../flux-core" }
flux-types = { path = "../flux-types" }
