[package]
name = "flux-rule"
version = "0.1.0"
edition = "2021"
authors = ["FLUX IOT Team"]
description = "Rule engine for FLUX IOT platform"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-cron-scheduler = "0.10"
rhai = { version = "1.16", features = ["serde", "sync"] }

# Workspace dependencies
flux-script = { path = "../flux-script" }
flux-core = { path = "../flux-core" }
flux-types = { path = "../flux-types" }
