[package]
name = "flux-script"
version = "0.1.0"
edition = "2021"

[dependencies]
rhai = { version = "1.16", features = ["serde", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
flux-types = { path = "../flux-types" }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
