[package]
name = "flux-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }

flux-core = { path = "../flux-core" }
flux-plugin = { path = "../flux-plugin" }
flux-script = { path = "../flux-script" }
