[package]
name = "flux-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"

flux-core = { path = "../flux-core" }
flux-plugin = { path = "../flux-plugin" }
flux-script = { path = "../flux-script" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
flux-types = { version = "0.1.0", path = "../flux-types" }
flux-mqtt = { path = "../flux-mqtt" }
flux-video = { path = "../flux-video" }

# Metrics and observability
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

[dev-dependencies]
tower = "0.4"
hyper = "0.14"
tempfile = "3"
