[package]
name = "flux-srt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flux-srt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
bytes = "1.5"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
flux-config = { path = "../flux-config" }
flux-media-core = { path = "../flux-media-core" }
flux-storage = { path = "../flux-storage" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
