[package]
name = "flux-storage"
version = "0.1.0"
edition = "2021"

[lib]
name = "flux_storage"
path = "src/lib.rs"

# 监控服务可执行文件
[[bin]]
name = "flux-storage-monitor"
path = "src/bin/monitor.rs"
required-features = ["monitor"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }

reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }

# 磁盘监控
sysinfo = "0.30"

# 配置
toml = "0.8"

# 监控服务依赖（可选）
flux-notify = { path = "../flux-notify", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[features]
default = []
monitor = ["flux-notify", "tracing-subscriber", "reqwest"]
