[package]
name = "flux-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }

flux-config = { path = "../flux-config" }
flux-media-core = { path = "../flux-media-core" }

[dev-dependencies]
tokio-test = "0.4"
