[package]
name = "flux-timeseries"
version = "0.1.0"
edition = "2021"
authors = ["FLUX IOT Team"]
description = "Time-series data storage for FLUX IOT platform"

[dependencies]
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
tokio-cron-scheduler = "0.10"
uuid = { version = "1.0", features = ["v4"] }

# Workspace dependencies
flux-core = { path = "../flux-core" }
flux-types = { path = "../flux-types" }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
