[package]
name = "flux-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde", "clock"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
